--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals having contributed content to the repository for Holberton School Shell project.
 
 Germaine Balmania <germaine.balmania@gmail.com>
 Mikaela Gurney <mikaelagurney@gmail.com>
